--- a/assets/css/admin_styles.css
+++ b/assets/css/admin_styles.css
@@ -561,9 +561,9 @@ body {
 }
 
 .show-products .box img {
-   width: 100%;
-   height: auto;
-   margin-bottom: 1rem;
+   width: 200px; 
+   height: 200px; 
+   object-fit: cover; 
 }
 
 .show-products .box .name,
